# ZephyrOS_RasPiPico_PicoDRO

./: .editorconfig  .gitignore  README.md  west.yml
app/: CMakeLists.txt  Kconfig  debug.conf  usb.conf  usb.overlay
app/src/: main.c
